# spotfight_server

./: Dockerfile  README.md
.github/workflows/: docker-image.yml
server_runner/: .gitignore  Cargo.toml  Dockerfile
server_runner/src/: main.rs
