[package]
name = "server_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"]}
warp = "0.3.2"
serde = { version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"